Completed Exam Task With DDD Clean Architecture

--- a/Intsof.Exam/src/Intsoft.Exam.API/appsettings.json
+++ b/Intsof.Exam/src/Intsoft.Exam.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "SqlConnectionString": "Server=.; Database=IntSoft; Trusted_Connection=True; TrustServerCertificate=True;"
+  },
   "AllowedHosts": "*"
 }
